@@ -273,6 +273,11 @@
 						</tr>
 						<tr>
 							<td><input type="checkbox" id="gamebillet"><label for="gamebillet">GameBillet</label></td>
+							<td><input type="checkbox" id="silagames"><label for="silagames">SilaGames</label></td>
+							<td><input type="checkbox" id="playfield"><label for="playfield">Playfield</label></td>
+						</tr>
+						<tr>
+							<td><input type="checkbox" id="imperialgames"><label for="imperialgames">Imperial Games</label></td>
 						</tr>
 						<tr>
 						<li id="view_price_li">
